[package]
name = "escrow-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["testing"]  # NB: Remove this before deploying
no-entrypoint = []
testing = []

[dependencies]
borsh = "^1.5.1"
solana-program = "=2.1.11"
spl-token = { version = "^6.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "^6.0", features = [ "no-entrypoint" ] }
thiserror="^1.0"

[dev-dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
solana-account-decoder = "=2.1.11"
solana-program-test = "=2.1.11"
solana-sdk = "=2.1.11"
tokio = "^1"

# Suppress rust toolchain complaint about solana not being an target_os
# https://solana.stackexchange.com/a/17963/36601
[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]
